--- a/sites/all/themes/rs_201407/scss/rs-201407-alpha-default.scss
+++ b/sites/all/themes/rs_201407/scss/rs-201407-alpha-default.scss
@@ -7,3 +7,6 @@
     }
   }
 }
+.region-user-first {
+  height:45px;
+}
